# mcp-doctor

./: .gitignore  Makefile  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/mcp_doctor/: __init__.py  __main__.py  cli.py  loader.py  mcp_server.py  report.py
src/mcp_doctor/checks/: __init__.py  ai_review.py  cross_platform.py  install_friction.py  interface_quality.py  task_clarity.py  token_efficiency.py  trust_safety.py
tests/: test_ai_review.py  test_checks.py  test_loader.py  test_report.py  test_self_check.py
