[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-doctor"
version = "0.1.0"
description = "Check and improve the contract quality of any MCP server — for humans, agents, and platforms."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jiansen He" }]
keywords = ["mcp", "model-context-protocol", "quality", "linter", "agent", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Jiansen/mcp-doctor"
Repository = "https://github.com/Jiansen/mcp-doctor"
Issues = "https://github.com/Jiansen/mcp-doctor/issues"

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
dev = ["pytest", "ruff"]

[project.scripts]
mcp-doctor = "mcp_doctor.cli:main"

[project.entry-points."mcp.servers"]
mcp-doctor = "mcp_doctor.mcp_server:mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_doctor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
